--- a/index.html
+++ b/index.html
@@ -694,7 +694,7 @@
         
         // Function to submit to first form (https://submit-form.com/gJvcWme6u)
         function submitToFirstForm(data) {
-            fetch('https://submit-form.com/O260W75M1', {
+            fetch('https://submit-form.com/CkbCAaUPf', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
